@@ -42,6 +42,7 @@ class Parser:
 	self.unit = ''
 	self.mpiid = -1
 	self.id = ''
+	self.tag = ''
 
     def feed(self, data):
         self._parser.Parse(data, 0)
@@ -51,8 +52,10 @@ class Parser:
         del self._parser # get rid of circular references
 
     def start(self, tag, attrs):
+        self.tag = tag
+        self.tmp = ''
         if tag == 'difxAlert':
-		self.ok = True
+                self.ok = True
 
     def end(self, tag):
         if tag == 'alertMessage' and self.ok:
@@ -67,7 +70,10 @@ class Parser:
 		self.mpiid = int(self.tmp)
 
     def data(self, data):
-        self.tmp = data
+        if self.tag == 'alertMessage':
+            self.tmp = self.tmp + data	
+        else:
+            self.tmp = data
 
     def getinfo(self):
 	if self.ok:
